xvision mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ body {
      -khtml-user-select: none; /* Konqueror HTML */
        -moz-user-select: none; /* Old versions of Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
 
 
